--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -110,3 +110,14 @@ ion-content{
   margin-bottom: 1rem !important;
   padding-bottom:1rem !important ;
 }
+.users{
+  padding: 16px;
+  background: #eee;
+  border-radius: 12px;
+  width: fit-content;
+  margin: auto;
+  h3{
+    font-size: 20px;
+  }
+  
+}
