--- a/src/app/pages/send-notifications/send-notifications.page.html
+++ b/src/app/pages/send-notifications/send-notifications.page.html
@@ -1,6 +1,11 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>send-notifications</ion-title>
+    <ion-buttons slot="start">
+      <ion-button class="w40px" (click)="navBack()">
+        <img src="../../../assets/icon/icons8_back 1.svg" />
+      </ion-button>
+    </ion-buttons>
+    <ion-title color="light" class="font-reg-24">إرسال إشعارات</ion-title>
   </ion-toolbar>
 </ion-header>
 
