--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -1,13 +1,71 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>users</ion-title>
+    <ion-buttons slot="start">
+      <ion-button class="w40px" (click)="navBack()">
+        <img src="../../../assets/icon/icons8_back 1.svg" />
+      </ion-button>
+    </ion-buttons>
+    <ion-title color="light" class="font-reg-24">قائمة الطلاب</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">users</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content >
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+  <div class="container" >
+    <div class="searcher">
+      <div class="search-side">
+        <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)" [(ngModel)]="searchText" placeholder="ابحث بالهاتف ..">
+          <ion-icon name="search-outline" class="icon-search"></ion-icon>
+          </div>
+          <div class="search-side">
+            <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)" [(ngModel)]="username" placeholder="ابحث بالإسم ..">
+              <ion-icon name="search-outline" class="icon-search"></ion-icon>
+              </div>
+
+    </div>
+
+
+
+
+    <!-- Students List  -->
+    <div class="student-list  font-reg" >
+      <div class="list-item" *ngFor="let user of users;trackBy:trackByFn"
+      [ngClass]="{'inactive':user.active===false}"
+
+       >
+        <div class="right-part" (click)="navigate('users/'+user._id, 'forward')">
+          <img  src="../../../assets/images/student1.png" alt="">
+          <div class="info">
+            <h2>{{user.displayName}}</h2>
+            <p>{{user.username}}</p>
+          </div>
+        </div>
+
+
+      </div>
+      <div class="emptyView directionCol" *ngIf="emptyView">
+        <span>لا يوجد طلاب</span>
+      </div>
+
+      <div class="emptyView directionCol"  *ngIf="isLoading">
+      <ion-spinner class="spinners"></ion-spinner>
+
+      </div>
+
+      <div class="emptyView" *ngIf="errorView">
+        <span>حدث خطأ ما!</span>
+      </div>
+    </div>
+
+    <!-- End of Students List  -->
+    <ion-infinite-scroll (ionInfinite)="loadData($event)">
+      <ion-infinite-scroll-content loadingText="تحميل..." loadingSpinner="bubbles"></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  </div>
+
+
 </ion-content>
