--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
       <ion-text color="primary">
         <h1>عدد المستخدمون</h1>
       </ion-text>
-      <ion-text class="ion-text-center" color="primary">10</ion-text>
+      <ion-text class="ion-text-center" color="primary">{{users.length}}</ion-text>
     </h3>
   </div>
   <!-- /////////////////////////// Menu //////////////////////////////////////////////////// -->
