--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -42,13 +42,14 @@
           <div class="info">
             <h2>{{user.displayName}}</h2>
             <p>{{user.username}}</p>
+            <p>{{user.phone}}</p>
           </div>
         </div>
 
 
       </div>
       <div class="emptyView directionCol" *ngIf="emptyView">
-        <span>لا يوجد طلاب</span>
+        <span>لا يوجد مستخدمون</span>
       </div>
 
       <div class="emptyView directionCol"  *ngIf="isLoading">
