working on extra stuff

--- a/src/app/pages/send-notifications/send-notifications.page.html
+++ b/src/app/pages/send-notifications/send-notifications.page.html
@@ -39,7 +39,7 @@
         >
           <div class="top">
             <div class="img">
-              <img  src="../../../assets/images/user1.png" alt="">
+              <img  src="../../../assets/images/person-4.png" style="opacity: 0.5;" alt="">
         </div>
         <div class="info">
           <h3>{{user.displayName}}</h3>
@@ -57,7 +57,6 @@
 
       <div class="emptyView directionCol"  *ngIf="isLoading">
       <ion-spinner class="spinners"></ion-spinner>
-
       </div>
 
       <div class="emptyView" *ngIf="errorView">
@@ -71,7 +70,7 @@
     </div>
 
 
-    <ion-infinite-scroll (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll (ionInfinite)="loadData($event)" [disabled]="stopLoading">
       <ion-infinite-scroll-content loadingText="تحميل..." loadingSpinner="bubbles"></ion-infinite-scroll-content>
     </ion-infinite-scroll>
   </div>
