--- a/src/app/pages/user-details/user-details.page.html
+++ b/src/app/pages/user-details/user-details.page.html
@@ -12,11 +12,11 @@
 <ion-content>
 
   <div class="container">
-    <div class="user-box border-shadow">
+    <div class="user-box border-shadow animate__animated animate__fadeIn">
       <ion-item lines="none">
         <ion-icon name="person"  class="ion-padding-end"></ion-icon>
         <ion-label>
-          <h3>
+          <h3 class="head-text">
             <ion-text> {{user?.displayName}} </ion-text>
           </h3>
           <p>
@@ -28,13 +28,13 @@
         </ion-label>
 
       </ion-item>
-        <h3 class="ion-text-center">انضم منذ: {{user?.createdAt| date:'dd/MM/yyyy'}}</h3>
+        <p class="ion-text-center">انضم منذ: {{user?.createdAt| date:'dd/MM/yyyy'}}</p>
     </div>
 
     <ion-item lines="none" class="toggle-item">
       <ion-label position="fixed">حالة الحساب</ion-label>
       <p > مفعل</p>
-      <ion-toggle (ionChange)="toggleAccoutState($event)" [checked]="isChecked"></ion-toggle>
+      <ion-toggle class="animate__animated animate__fadeIn" (ionChange)="toggleAccoutState($event)" [checked]="isChecked"></ion-toggle>
       <p class="ion-padding-start">غير مفعل</p>
     </ion-item>
   </div>
