--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -35,7 +35,7 @@ ion-buttons {
   }
 }
 .container {
-  height: 100%;
+  // height: 100%;
   margin: auto;
   display: flex;
   // width: 375px;
@@ -119,5 +119,5 @@ ion-content{
   h3{
     font-size: 20px;
   }
-  
+
 }
