--- a/src/global.scss
+++ b/src/global.scss
@@ -39,7 +39,7 @@
 html,
 body,
 * {
-  animation: fadeIn ;
+  // animation: fadeIn ;
   animation-duration:.4s ;
   direction: rtl;
   max-width: 768px;
