--- a/src/app/pages/suggestions/suggestions.page.html
+++ b/src/app/pages/suggestions/suggestions.page.html
@@ -12,18 +12,24 @@
 <ion-content >
 
 
-  <ion-segment [value]="segment" (ionChange)="segmentChanged($event)">
-    <ion-segment-button value="read">
-      <ion-label>مقروء</ion-label>
-    </ion-segment-button>
 
-    <ion-segment-button value="unread">
-      <ion-label>
-        <ion-badge color="dark">{{unreadCount}}</ion-badge>
-        غير مقروء
-      </ion-label>
-    </ion-segment-button>
-  </ion-segment>
+  <!-- <div class="container2 segments font-reg">
+
+
+  <ion-segment [value]="segment"
+    mode="ios"
+    (ionChange)="segmentChanged($event)"
+    [value]="segment">
+      <ion-segment-button value="read" [ngClass]="{ 'active': segment === 'read' }">
+        <ion-label>مقروء</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="unread" [ngClass]="{ 'active': segment === 'unread' }">
+        <ion-label> غير مقروء</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+</div>
+ -->
+
 
 
   <div class="segment-view">
@@ -42,4 +48,43 @@
 
 
   </div>
+
+  <div class="list-items" *ngIf="segment==='unread'">
+    <div class="item-list" *ngFor="let sugg of suggestions"
+    >
+      <div class="top" >
+
+    <div class="info">
+      <h3>{{sugg.title}}
+        <ion-chip color="primary" class="ion-padding">
+          <span class="price ion-padding" >
+            {{sugg.body}}
+            <!-- <span *ngIf="student.sub===0">يومي</span>
+            <span *ngIf="student.sub===1">شهري</span>
+            <span *ngIf="student.sub===2">سنوي</span> -->
+          </span>
+        </ion-chip>
+      </h3>
+
+    </div>
+
+   </div>
+
+  </div>
+  <div class="emptyView directionCol" *ngIf="!suggestions?.length && !isLoading">
+    <span>لا يوجد طلاب</span>
+  </div>
+
+  <div class="emptyView directionCol"  *ngIf="isLoading">
+  <ion-spinner class="spinners"></ion-spinner>
+
+  </div>
+
+  <div class="emptyView" *ngIf="errorView">
+    <span>حدث خطأ ما!</span>
+  </div>
+  </div>
+
+
+
 </ion-content>
