--- a/src/app/pages/suggestions/suggestions.page.scss
+++ b/src/app/pages/suggestions/suggestions.page.scss
@@ -4,7 +4,7 @@ ion-segment{
   background: var(--ion-bg-pink);
 
   ion-segment-button{
-    
+
     --background-checked: var(--ion-pink);
     --color-checked:#fff;
     font-size: 16px;
@@ -23,4 +23,280 @@ ion-segment{
     padding: 16px;
     border-radius: 12px;
   }
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.container  {
+  padding: 16px;
+}
+
+.searcher{
+margin-bottom: 8px;
+display: flex;
+align-items: center;
+gap: 8px;
+.search-side{
+  flex: 3;
+  position: relative;
+  .icon-search{
+    position: absolute;
+    left: 16px;
+    top: 12px;
+    font-size: 25px;
+  }
+  input{
+    width: 100%;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    background: var(--bg);
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0, 0.32);
+    padding: 11px;
+  }
+}
+.filter {
+  flex: 0.5;
+}
+.filter {
+  background: #f4f4f4;
+  border-radius: 12px;
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  &:active {
+    background: #eee;
+  }
+}
+.segments{
+  margin-bottom: 16px;
+}
+}
+.student-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  .list-item {
+    border: 1px solid rgba(0,0,0,0.1) !important;
+  box-shadow: -1px 2px 15px -8px rgba(246, 74, 145, 0.3) !important;
+    background: var(--Lever01, #f4f4f4);
+    padding: 12px;
+    display: flex;
+    border-radius: 12px;
+    align-items: center;
+    justify-content: space-between;
+    img {
+      width: 48px;
+      height: 48px;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+    .right-part {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      .info {
+        h2 {
+          color: #000;
+
+          text-align: right;
+
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 32px; /* 177.778% */
+        }
+        p {
+          color: #231f20;
+
+          text-align: right;
+          font-feature-settings: "clig" off, "liga" off;
+
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 24px; /* 150% */
+          letter-spacing: 0.2px;
+        }
+      }
+    }
+    position: relative;
+    .options{
+      padding: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      left: 8px;
+      top: 30%;
+      border-radius: 50%;
+        transition: 0.16s;
+        &:active{
+        transition: 0.16s;
+        background: var(--ion-bg-pink);
+      }
+    }
+    &.inactive{
+      box-shadow: 0 0 1px 1px red !important;
+    }
+  }
+}
+
+.chip{
+  padding: 0 12px;
+}
+
+.search-queries{
+  margin-bottom: 8px;
+  display: flex;
+  gap: 16px;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  ion-label{
+    display: flex;
+    gap: 8px;
+  }
+}
+.list-items{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  .item-list{
+    border: 1px solid rgba(0,0,0,0.1) !important;
+  box-shadow: -1px 2px 15px -8px rgba(246, 74, 145, 0.3) !important;
+    padding: 12px 16px;
+    background: var(--bg);
+    border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  .top{
+    display: flex;
+    gap: 16px;
+    .img{
+      flex: 0.4;
+      display: flex;
+      justify-content: center;
+      max-width: 50px;
+        max-height: 50px;
+        img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 12px;
+      }
+    }
+    .info{
+      h3{
+        display: flex;
+        justify-content: space-between;
+        line-height: 1rem;
+        align-items: center;
+        span{
+        font-weight: 700;
+          font-size: 18px;
+          padding: 8px 12px;
+        }
+      }
+      flex: 2;
+      display: flex;
+      justify-content: start;
+      flex-direction: column;
+    }
+
+  }
+  .down{
+    width: 100%;display: flex;
+    justify-content:center;
+    align-items: center;
+    span{
+      text-align: center;
+      min-width: 200px;
+      padding: 8px;
+      border: 1px solid var(--ion-pink);
+      color: var(--ion-pink);
+      border-radius: 12px;
+      &:active{
+        background: var(--ion-bg-pink);
+      }
+    }
+  }
+  &.inactive{
+    box-shadow: 0 0 1px 1px red !important;
+  }
+}
+
+}
+
+ion-segment {
+  padding: 12px 0;
+  // margin-top: 16px;
+  // width: 375px;
+  // margin: auto;
+  margin-bottom: 16px;
+  background: rgba(246, 74, 145, 0.09);
+  ion-segment-button {
+    font-family: "regular";
+      transition: 0.12s;
+      &.active {
+      transition: 0.12s;
+      background: var(--ion-pink);
+    }
+    height: 36px;
+    // background: var(--ion-pink);
+    background: rgba(246, 74, 145, 0.12);
+    border: none;
+    margin: 0 2px;
+    &::before {
+      margin: 5px 0px;
+      transition: opacity 160ms ease-in-out 100ms;
+      border-left: none !important;
+      content: "";
+      opacity: 1;
+      will-change: opacity;
+    }
+  }
+  ion-segment-button {
+    --background-checked: var(--ion-pink);
+    --color-checked: var();
+    .button-native{
+      background: red !important;
+    }
+  }
+  // ion-segment-button::part(indicator){
+  //   // background: blue;
+  // }
+}
+ion-segment {
+  // font-family: "regular" !important;
+  padding-inline: 16px;
+  ion-segment-option {
+    font-family: "regular" !important;
+  }
+}
+ion-segment-button {
+      margin: 0 5px !important;
+      --margin: 0 5px !important;
+  --indicator-height:0;
+  --color:var(--ion-pink);
+  --color-checked: #fff;
+  --indicator-box-shadow: 0px 4px 11px 0px rgba(246, 74, 145, 0.50);
+  font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 150% */
+}
+.ion-item{
+  --background:transparent ;
+}
+.text-md{
+  font-size: 18px;
+  font-weight: 600;
 }
