--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -1,30 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-button class="w40px" (click)="navBack()">
         <img src="../../../assets/icon/icons8_back 1.svg" />
       </ion-button>
-    </ion-buttons>
-    <ion-title color="light" class="font-reg-24">قائمة الطلاب</ion-title>
+    </ion-buttons> -->
+    <ion-title color="light" class="font-reg-24 ion-padding-start">قائمة الطلاب</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <div class="container" >
+  <div class="container">
     <div class="searcher">
       <div class="search-side">
-        <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)" [(ngModel)]="searchText" placeholder="ابحث بالهاتف ..">
-          <ion-icon name="search-outline" class="icon-search"></ion-icon>
-          </div>
-          <div class="search-side">
-            <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)" [(ngModel)]="username" placeholder="ابحث بالإسم ..">
-              <ion-icon name="search-outline" class="icon-search"></ion-icon>
-              </div>
+        <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)"
+          [(ngModel)]="searchText" placeholder="ابحث بالهاتف ..">
+        <ion-icon name="search-outline" class="icon-search"></ion-icon>
+      </div>
+      <div class="search-side">
+        <input type="search" (input)="getDataAgain($event)" (keyup.enter)="HandleSearchInput($event)"
+          [(ngModel)]="username" placeholder="ابحث بالإسم ..">
+        <ion-icon name="search-outline" class="icon-search"></ion-icon>
+      </div>
 
     </div>
 
@@ -32,28 +34,53 @@
 
 
     <!-- Students List  -->
-    <div class="student-list  font-reg" >
-      <div class="list-item animate__animated animate__fadeIn animate__faster" *ngFor="let user of users;trackBy:trackByFn"
-      [ngClass]="{'inactive':user.active===false}"
-
-       >
+    <div class="student-list  font-reg">
+      <div class="list-item animate__animated animate__fadeIn animate__faster"
+        *ngFor="let user of users;trackBy:trackByFn" [ngClass]="{'inactive':user.active===false}">
         <div class="right-part" (click)="navigate('users/'+user._id, 'forward')">
-          <img  src="../../../assets/images/student1.png" alt="">
+          <img src="../../../assets/images/student1.png" alt="">
           <div class="info">
             <h2>{{user.displayName}}</h2>
             <p>{{user.username}}</p>
             <p>{{user.phone}}</p>
           </div>
         </div>
+        <div class="left-part">
+          <ion-button fill="clear" shape="round" id="user-{{user._id}}">
+            <ion-icon name="ellipsis-vertical" class="icon"
+              slot="icon-only"></ion-icon>
+          </ion-button>
+        </div>
+        <ion-popover [dismissOnSelect]="true" #popover mode="ios" trigger="user-{{user._id}}">
+          <ng-template>
+            <ion-list lines="none">
 
+              <ion-item [button]="true" detail="false"
+              (click)="callPhone(user)"
+                >
+                <ion-label>اتصال</ion-label>
+              </ion-item>
 
+              <ion-item [button]="true" detail="false"
+              (click)="deactivateAcc(user)"
+                >
+                <ion-label>ايقاف الحساب</ion-label>
+              </ion-item>
+              <ion-item [button]="true" detail="false"
+              (click)="activateAcc(user)"
+                >
+                <ion-label>تفعيل الحساب</ion-label>
+              </ion-item>
+            </ion-list>
+          </ng-template>
+        </ion-popover>
       </div>
       <div class="emptyView directionCol" *ngIf="emptyView">
         <span>لا يوجد مستخدمون</span>
       </div>
 
-      <div class="emptyView directionCol"  *ngIf="isLoading">
-      <ion-spinner class="spinners"></ion-spinner>
+      <div class="emptyView directionCol" *ngIf="isLoading">
+        <ion-spinner class="spinners"></ion-spinner>
 
       </div>
 
