working on sugg

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -5,7 +5,7 @@
         <img src="../../../assets/icon/icons8_back 1.svg" />
       </ion-button>
     </ion-buttons> -->
-    <ion-title color="light" class="font-reg-24 ion-padding-start">الإعدادات</ion-title>
+    <ion-title color="light" class="font-reg-24 ion-padding-start">معلومات الإتصال</ion-title>
   </ion-toolbar>
 </ion-header>
 
