--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,6 +10,9 @@
       <ion-tab-button tab="suggestions">
         <ion-icon name="book-outline"></ion-icon>
         الإقتراحات
+        <ion-badge >
+          {{suggCount || 0}}
+        </ion-badge>
       </ion-tab-button>
 
 
